# pulsed-lattice-sim

./: .gitignore  .indent.pro  .travis.yml  Makefile.am  README.md  SCRATCH_PAD.md  configure  configure.ac  makefile  test.c
lib/fftw-3.3.4-dll64/: .gitignore
m4/: .gitignore
src/: Makefile.am  lens_setup.c  lens_setup.h  main.c  retCodes.h
tests/: Makefile.am  check_dummy.c  check_flip.c
